Changelog
=========

1.30-dev - (unreleased)
-----------------------

1.29 - (2010-12-17)
-------------------
 * Bug fix: Fixed title calculation for Specification [tiberich #4006]

1.28 - (2010-12-16)
-------------------
 * Work in progress: Fixed code accordingly to pass PyFlakes tests [tiberich, ghicaale #3676]

1.27 - (2010-12-13)
-------------------
 * Bug fix: Fixed jslint warnings [voineali #3821]

1.26 - (2010-12-06)
-------------------
 * Feature: Allow reassigning codes when related specifications have different codes [tiberich #3756]
 * Feature: Added @@ims_wrong_maincode admin view to see and fix related specs with different codes [tiberich #3756]
 * Bug fix: Added Specification2Surf adapter to solve @@rdf view problem [tiberich #3893]

1.25 - (2010-11-19)
-------------------
 * Bug fix: add eea.vocab profile to dependencies. Fixes tests [tiberich]
 * Bug fix: changed wording for "no datasets specified" messages [tiberich #3831]
 * Bug fix: preselect EEAFigure tab in relations popup [tiberich #3604]

1.24 - (2010-11-12)
-------------------
 * Change: Added cache metadata to images [ghicaale #3667]

1.23 - (2010-11-10)
-------------------
 * Change: Cleanup doctests according to eea.vocab fix [voineali]
 * Change: Set default creation locations for PolicyQuestion and IndicatorFactSheet [tiberich #3584]
 * Change: Recreate accordion on portlet readiness reload [tiberich #3766]

1.22 - (2010-11-01)
-------------------
 * Change: use new API from eea.versions [tiberich #3278]

1.21 - (2010-10-29)
-------------------
 * Change: now using new API for _get_random from eea.versions [tiberich #3758]
 * Change: on assessment state change, make the assessment discussable [tiberich #3791]

1.20 - (2010-10-25)
-------------------
 * Change: On reassign_version also assign new versions to all assessment
   group of that Specification [tiberich #3790]

1.19 - (2010-10-25)
-------------------
 * Move readiness warning icon in front of text in @@ims_timeline [tiberich]
